Fix height overflow topbar issue.

--- a/src/indexer/css/style.css
+++ b/src/indexer/css/style.css
@@ -148,6 +148,7 @@ div.top-bar > div.directory-info > div.quick-path
 	overflow-x: hidden;
 	text-overflow: ellipsis;
 	vertical-align: middle;
+	position: absolute;
 }
 
 div.top-bar > div.directory-info > div.quick-path a
